--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 home/user/.emacs.d/backup/**/*
 home/user/.emacs.d/auto-save/**/*
 home/user/.emacs.d/auto-save-list/**/*
+home/user/.emacs.d/ido.last
 
 home/user/.xmonad/**/*.o
 home/user/.xmonad/**/*.hi
