Require clojure mode in emacs

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 home/user/.emacs.d/backup/**/*
+home/user/.emacs.d/backups/**/*
 home/user/.emacs.d/auto-save/**/*
 home/user/.emacs.d/auto-save-list/**/*
 home/user/.emacs.d/ido.last
