--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,6 @@
 sudo: false
 language: emacs-lisp
 
-addons:
-  apt:
-    packages:
-    - autogen
-    - ca-certificates
-    - curl
-    - gcc
-    - libgmp-dev
-    - m4
-    - make
-    - pkg-config
-    - xz-utils
-
 cache:
   directories:
   - $HOME/local
@@ -23,26 +10,42 @@ env:
     - PATH=$HOME/local/bin:$HOME/local/evm/bin:$HOME/local/cask/bin:$PATH
   matrix:
     - EMACS_BINARY=emacs-24.4-travis MAKE_TEST=test
-    - EMACS_BINARY=emacs-24.4-travis MAKE_TEST=test-bytecomp
     - EMACS_BINARY=emacs-24.5-travis MAKE_TEST=test
-    - EMACS_BINARY=emacs-24.5-travis MAKE_TEST=test-bytecomp
     - EMACS_BINARY=emacs-25.1-travis MAKE_TEST=test
-    - EMACS_BINARY=emacs-25.1-travis MAKE_TEST=test-bytecomp
     - EMACS_BINARY=emacs-25.2-travis MAKE_TEST=test
-    - EMACS_BINARY=emacs-25.2-travis MAKE_TEST=test-bytecomp
     - EMACS_BINARY=emacs-25.3-travis MAKE_TEST=test
-    - EMACS_BINARY=emacs-25.3-travis MAKE_TEST=test-bytecomp
-    - EMACS_BINARY=emacs-25.3-travis MAKE_TEST=test-checks
     - EMACS_BINARY=emacs-26-pretest-travis MAKE_TEST=test
-    - EMACS_BINARY=emacs-26-pretest-travis MAKE_TEST=test-bytecomp
-    - EMACS_BINARY=emacs-26-pretest-travis MAKE_TEST=test-checks
     - EMACS_BINARY=emacs-git-snapshot-travis MAKE_TEST=test
-    - EMACS_BINARY=emacs-git-snapshot-travis MAKE_TEST=test-bytecomp
-    - EMACS_BINARY=emacs-git-snapshot-travis MAKE_TEST=test-checks
+
+stages:
+  - check
+  - test
+
+jobs:
+  include:
+    # linting for code quality
+    - stage: check
+      env: EMACS_BINARY=emacs-24.4-travis MAKE_TEST=lint
+    - stage: check
+      env: EMACS_BINARY=emacs-24.5-travis MAKE_TEST=lint
+    - stage: check
+      env: EMACS_BINARY=emacs-25.1-travis MAKE_TEST=lint
+    - stage: check
+      env: EMACS_BINARY=emacs-25.2-travis MAKE_TEST=lint
+    - stage: check
+      env: EMACS_BINARY=emacs-25.3-travis MAKE_TEST=lint
+    - stage: check
+      env: EMACS_BINARY=emacs-26-pretest-travis MAKE_TEST=lint
+    - stage: check
+      env: EMACS_BINARY=emacs-git-snapshot-travis MAKE_TEST=lint
+
+    # "matrix" of tests is implicit in the "test" stage
+
+  allow_failures:
+    - env: EMACS_BINARY=emacs-git-snapshot-travis MAKE_TEST=test
+    - env: EMACS_BINARY=emacs-git-snapshot-travis MAKE_TEST=lint
 
 before_script:
-  - sh travis-ci/install-gnutls.sh
-  - gnutls-cli -v
   - sh travis-ci/install-evm.sh
   - evm install $EMACS_BINARY --use --skip
   - sh travis-ci/install-cask.sh
