Additional changes to support github markdown and previewing

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ Users/user/.emacs.d/backup/**/*
 Users/user/.emacs.d/backups/**/*
 Users/user/.emacs.d/auto-save/**/*
 Users/user/.emacs.d/auto-save-list/**/*
+Users/user/.emacs.d/url/**/*
 Users/user/.emacs.d/ido.last
 Users/user/.emacs.d/projectile.cache
 Users/user/.emacs.d/projectile-bookmarks.eld
