--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ Users/user/.emacs.d/auto-save/**/*
 Users/user/.emacs.d/auto-save-list/**/*
 Users/user/.emacs.d/url/**/*
 Users/user/.emacs.d/server/**/*
+Users/user/.emacs.d/desktops/**/*
 Users/user/.emacs.d/ido.last
 Users/user/.emacs.d/projectile.cache
 Users/user/.emacs.d/projectile-bookmarks.eld
