ignore lein self installs

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 Users/user/.lein/repl-history
+Users/user/.lein/self-installs/**/*
 
 Users/user/.emacs.d/backup/**/*
 Users/user/.emacs.d/backups/**/*
