VS code settings update

--- a/home/user/.config/Code/User/settings.json
+++ b/home/user/.config/Code/User/settings.json
@@ -8,5 +8,6 @@
     "editor.fontFamily": "'Fira Code', 'monospace', monospace",
     "editor.fontLigatures": true,
     "editor.fontWeight": "bold",
-    "update.mode": "none"
+    "update.mode": "none",
+    "explorer.confirmDragAndDrop": false
 }
