--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,9 @@ home/user/.emacs.d/auto-save/**/*
 home/user/.emacs.d/auto-save-list/**/*
 home/user/.emacs.d/desktops/**/*
 home/user/.emacs.d/url/**/*
+home/user/.emacs.d/elpa/**/*
 home/user/.emacs.d/.lsp-session-*
+home/user/.emacs.d/.org-id-locations
 home/user/.emacs.d/ido.last
 home/user/.emacs.d/projectile.cache
 home/user/.emacs.d/projectile-bookmarks.eld
