--- a/home/user/.config/Code/User/settings.json
+++ b/home/user/.config/Code/User/settings.json
@@ -1,7 +1,7 @@
 {
     "window.menuBarVisibility": "toggle",
-    "dart.checkForSdkUpdates": false,
-    "workbench.colorTheme": "Tomorrow Night",
+    //"dart.checkForSdkUpdates": false,
+    //"workbench.colorTheme": "Tomorrow Night",
     "explorer.confirmDelete": false,
     "git.confirmSync": false,
     "window.zoomLevel": 0,
