--- a/home/user/.config/Code/User/settings.json
+++ b/home/user/.config/Code/User/settings.json
@@ -1,13 +1,12 @@
 {
     "window.menuBarVisibility": "toggle",
-    //"dart.checkForSdkUpdates": false,
     //"workbench.colorTheme": "Tomorrow Night",
     "explorer.confirmDelete": false,
     "git.confirmSync": false,
     "window.zoomLevel": 0,
-    "editor.fontFamily": "'Fira Code', 'monospace', monospace",
+    "editor.fontFamily": "'Fira Code', monospace",
     "editor.fontLigatures": true,
-    "editor.fontWeight": "bold",
     "update.mode": "none",
-    "explorer.confirmDragAndDrop": false
+    "explorer.confirmDragAndDrop": false,
+    "editor.fontWeight": "bold"
 }
