--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ home/user/.emacs.d/projectile.cache
 home/user/.emacs.d/projectile-bookmarks.eld
 home/user/.emacs.d/bookmarks
 home/user/.emacs.d/straight
+home/user/.emacs.d/places
 
 home/user/.xmonad/**/*.o
 home/user/.xmonad/**/*.hi
