Latests emacs updates

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ home/user/.emacs.d/desktops/**/*
 home/user/.emacs.d/url/**/*
 home/user/.emacs.d/elpa/**/*
 home/user/.emacs.d/elpy/**/*
+home/user/.emacs.d/transient/**/*
 home/user/.emacs.d/.lsp-session-*
 home/user/.emacs.d/.org-id-locations
 home/user/.emacs.d/ido.last
